--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "fcc-express-background",
-	"version": "0.0.2",
+	"name": "fcc-express-bground",
+	"version": "0.0.3",
   "author": {
     "name" : "em-ant",
     "email" : "joshua999x@gmail.com"
